package top.npucraft.npuvproj.proxy;

public class ServerProxy extends CommonProxy {

}
