package top.npucraft.npuvproj.utils;

public class Config {
	public static final String ModId = "npuvproj";
    public static final String ModName = "NPU Virtualization Project";
    public static final String ModVersion = "3.0.20_beta";

	public static final boolean IncludeFooBarSamples = true;
}
